--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,48 +5,58 @@ volumes:
 
 services:
   apollo-configservice:
-    image: polegek/apollo-configservice:1.4.0
+    image: polegek/apollo-configservice:1.5.1
     container_name: apollo-configservice
-    restart: always
-    hostname: apollo-configservice
+    network_mode: "host"
     ports:
-    - "8080:8080"
+      - "8080:8080"
     environment:
-      spring_datasource_url: jdbc:mysql://mysql.address:3306/apolloconfigdb?characterEncoding=utf8
-      spring_datasource_username: username
-      spring_datasource_password: password
+      SERVER_PORT: 8080
+      DS_URL: jdbc:mysql://mysql.address:3306/apolloconfigdb?characterEncoding=utf8
+      DS_USERNAME: username
+      DS_PASSWORD: password
     volumes: 
-    - apollo.log:/opt/logs
+      - apollo.log:/opt/logs
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "200k"
+        max-file: "10"
 
   apollo-adminservice:
-    image: polegek/apollo-adminservice:1.4.0
+    image: polegek/apollo-adminservice:1.5.1
     container_name: apollo-adminservice
-    restart: always
+    network_mode: "host"
     depends_on:
-    - apollo-configservice
-    hostname: apollo-adminservice
+      - apollo-configservice
     ports:
-    - "8090:8090"
+      - "8090:8090"
     environment:
-      spring_datasource_url: jdbc:mysql://mysql.address:3306/ApolloConfigDB?characterEncoding=utf8
-      spring_datasource_username: username
-      spring_datasource_password: password
+      SERVER_PORT: 8090
+      DS_URL: jdbc:mysql://mysql.address:3306/ApolloConfigDB?characterEncoding=utf8
+      DS_USERNAME: username
+      DS_PASSWORD: password
     volumes: 
-    - apollo.log:/opt/logs
+      - apollo.log:/opt/logs
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "200k"
+        max-file: "10"
 
   apollo-portal:
-    image: polegek/apollo-portal:1.4.0
+    image: polegek/apollo-portal:1.5.1
     container_name: apollo-portal
-    restart: always
+    network_mode: "host"
     depends_on:
-    - apollo-adminservice
-    hostname: apollo-portal
+      - apollo-adminservice
     ports:
-    - "8070:8070"
+      - "8070:8070"
     environment:
-      spring_datasource_url: jdbc:mysql://mysql.address:3306/ApolloPortalDB?characterEncoding=utf8
-      spring_datasource_username: username
-      spring_datasource_password: password
+      SERVER_PORT: 8070
+      DS_URL: jdbc:mysql://mysql.address:3306/ApolloPortalDB?characterEncoding=utf8
+      DS_USERNAME: username
+      DS_PASSWORD: password
       LOCAL_META: "http://apollo-configservice:8080"
       DEV_META: ""
       FAT_META: ""
@@ -54,5 +64,10 @@ services:
       LPT_META: ""
       PRO_META: ""
     volumes: 
-    - apollo.log:/opt/logs
+      - apollo.log:/opt/logs
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "200k"
+        max-file: "10"
 
